Trying to fix Gradle compatibility error